# YFonts

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  LOCAL_LIBRARY.md
scripts/: build-mac-local.mjs  clean-dist.mjs  desktop-smoke.cjs  index-font-library.mjs
src/: App.tsx  styles.css  tauri.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: main-window.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: installer-hooks.nsh
src/components/: DetailsPanel.tsx  FontList.tsx  LibrarySettingsPanel.tsx  OnlineSourceBar.tsx  Sidebar.tsx  TopBar.tsx  WindowTitleBar.tsx
src/lib/: appUpdate.ts  fontMetadata.ts  fontSearch.ts  fontsource.ts  i18n.ts  libraryState.ts  localFontIndex.ts  openLocation.ts  platform.ts  preview.ts  scanFontFolder.ts  tauri.ts
