[package]
name = "yfonts"
version = "1.16.1"
description = "Local-first font manager and free-commercial font discovery desktop app."
authors = ["YFonts"]
edition = "2021"

[lib]
name = "yfonts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging"
] }
